@@ -6,6 +6,7 @@
     * #text_field_element
     * #hidden_field_element
     * #text_area_element
+    * #select_list_element
   * Updated to use selenium-webdriver 2.4.0
   * Updated to use watir-webdriver 0.3.2
 
